Tikiwiki Changelog
------------------
$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.106 2003-09-23 14:58:52 dheltzel Exp $

All developers are invited to add relevant changes in that file as they
apply them to the CVS source. You can optionnaly indicate an identifer
for the origin of the change (author, submitter, anyone involved) but
it's not so useful as the cvs log knows who adds what when.

Use the following tags to distinguish changes :
* [NEW] apply to something new added in tikiwiki
* [MOD] is an enhancement, not really new but make things come easier
* [FIX] can be used for bug fixes of any sort

Please wrap your lines to 80 characters and indent them with spaces only.
------------------

Version 1.8 --
<http://tikiwiki.org/ReleaseProcess18>

* [NEW] Added a Jabber plugin {JABBER()}
* [NEW] Basic error handling in function "query" in lib/tikilib.php
* [NEW] assign page permissions to whole structures 
* [NEW] added an optional &highlight=word+otherword to highlight some words in any page
* [NEW] admin topics now allows existing topics to be changed
* [FIX] fixed galaxia bugs while porting to adodb queries
* [NEW] added a module to switch themes 
* [FIX] moved wiki table parse code behind link parse code
* [NEW] function targetBlank in tiki-js.lib
* [MOD] CODE plugin now accepts php syntax highlighting {CODE(colors=>php)}
* [NEW] Replace PEAR::DB with ADOdb to support PostgreSQL, Oracle, MSSQL, etc.
* [NEW] Added Real-time IRC (Internet Relay Chat) logging


Version 1.7.1.1 -Eta Carinae-
* [FIX] fixed a blocking bug that prevents wiki pages from being saved in some cases


Version 1.7.1 -Eta Carinae-
<http://tikiwiki.org/ReleaseProcess171>

* [FIX] fixed bug where special chars in site search resulted in warning notices
* [FIX] fixed smtp error on tiki-webmail.php
* [NEW] language : ru, nl, da and de updated
* [FIX] fixed bug with undefined variable and bugged form when creating a calendar